src/test/test-models/good/model/valid.stan
parameters {
  real x;
}
model {
  target += -0.5 * square(x);
}

