src/test/test-models/bad/compound-assign/elt_times_equals_prim.stan
generated quantities {
  real x;
  real y;
  x .*= y;
}
